Add mission execution and vehicle tracking workflows